--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
     <a href="#">index.html</a>
     <a href="garett.html">go to garett</a>
+    <a href="jarod.html">go to jarod</a>
 </html>
